# grid_py

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: api.md  index.md
grid_py/: __init__.py  _arrow.py  _clippath.py  _coords.py  _curve.py  _display_list.py  _draw.py  _edit.py  _font_metrics.py  _gpar.py  _grab.py  _grob.py  _group.py  _highlevel.py  _just.py  _layout.py  _ls.py  _mask.py  _path.py  _patterns.py  _primitives.py  _renderer_base.py  _size.py  _state.py  _transforms.py  _typeset.py  _units.py  _utils.py  _viewport.py  _vp_calc.py  renderer.py  renderer_web.py
grid_py/resources/: gridpy.js
site/: 404.html  api.html  index.html  objects.inv
site/search/: search_index.json
site/tutorials/: displaylist.html  frame.html  (+14 more)
tests/: conftest.py  test_coords.py  test_coverage_curve.py  test_coverage_gaps.py  test_coverage_primitives2.py  test_coverage_units2.py  test_coverage_viewport2.py  test_draw.py  test_edit.py  test_fill_stroke_grobs.py  test_gpar.py  test_grob.py  test_grob_metrics.py  test_grob_metrics_all.py  test_highlevel.py  test_layout.py  test_layout_algorithm.py  test_ls.py  test_primitives.py  test_r_grid_invariants.py  test_remaining_gaps.py  test_unit_resolution.py  test_units.py  test_viewport.py  test_web_renderer_gaps.py
tutorials/: 01_cairo_basics.ipynb  02_web_interactive.ipynb  03_cairo_vs_web_comparison.ipynb  comparison_web.html  displaylist.ipynb  grid.ipynb  grobs.ipynb  interactive.ipynb  interactive_plot.html  locndimn.ipynb  moveline.ipynb  plotexample.ipynb  rotated.ipynb  saveload.ipynb  viewports.ipynb
